# jash-rs

./: .gitignore  Cargo.toml  README.md  default_config.toml  mprocs.yaml  prepare_release.nu
.github/workflows/: ci.yml  release.yml
commands/cd/: Cargo.toml  clap.rs  lib.rs
commands/ls/: Cargo.toml  clap_args.rs  lib.rs
commands/pwd/: Cargo.toml  clap.rs  lib.rs
common/: Cargo.toml  commands.rs
config/: Cargo.toml  lib.rs
main/: Cargo.toml  exec.rs  lib.rs  main.rs  prompt.rs  shell.rs
