[package]
name = "jash-common"
version = "0.1.0"
authors = ["James Plummer <jamesp2001@live.co.uk>"]
categories = ["command-line-utilities"]
edition = "2024"
homepage = "https://github.com/jamesukiyo/jash-rs"
keywords = ["cli", "shell", "terminal"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jamesukiyo/jash-rs"
description = "Common library for jash."

[lib]
path = "lib.rs"

[dependencies]
clap = { workspace = true }
