[package]
name = "jash"
version = "0.1.0"
authors = ["James Plummer <jamesp2001@live.co.uk>"]
categories = ["command-line-utilities"]
edition = "2024"
homepage = "https://github.com/jamesukiyo/jash-rs"
keywords = ["cli", "shell", "terminal"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/jamesukiyo/jash-rs"
description = "Check the weather from your terminal."

[[bin]]
name = "jash"
path = "main.rs"

[dependencies]
clap = { workspace = true }
jash-cd = { path = "../commands/cd" }
jash-common = { path = "../common" }
jash-config = { path = "../config" }
jash-ls = { path = "../commands/ls" }
jash-pwd = { path = "../commands/pwd" }
